--- a/index.html
+++ b/index.html
@@ -8,27 +8,36 @@
     <title>mystic</title>
     <link rel="shortcut icon" href="./images/tab-icons/icon4.ico">
     <link rel="stylesheet" href="./main-style.css">
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
 
     <!--Navbar Section Start-->
-    <div id="navbar-section">
-        <div id="navbar-logo-and-menu-button-section">
-            <h1 id="main-logo">mystic</h1>
-            <img src="./images/navbar/menu-iconpng.png" alt="menu-icon" id="menuIcon">
-        </div>
-        <div id="linkSection">
-            <a href="*" class="main-links">home</a>
-            <a href="*" class="main-links">products</a>
-            <a href="*" class="main-links">newly added</a>
-            <a href="*" class="main-links">featured</a>
-            <a href="*" class="main-links">contact</a>
-        </div>
+
+    <div class="navbar-fixed">
+        <nav>
+            <div class="nav-wrapper">
+                <a href="#" class="brand-logo center">Mystic</a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a href="sass.html" class="main-links">About</a></li>
+                    <li><a href="sass.html" class="main-links">Contact</a></li>
+                    <li><a href="badges.html" class="main-links">Shop</a></li>
+                </ul>
+            </div>
+        </nav>
     </div>
-    <!--Navbar Section Start-->
+
+    <!--Navbar Section End-->
+
+
 </head>
 
 <body>
     <!--Landing Section Start-->
-    <div id="landing-section">
+    <div id="landing-section" class="content">
         <div class="overview-text-section">
             <h2 id="landing-header">October Specials</h2>
             <p id="landing-p">the classic tarot card deck is back in stock for the witching season. get a deck for
@@ -37,13 +46,31 @@
     </div>
     <!--Landing Section End-->
     <!--Merch Section Start-->
-<div id="merch-section">
-    <div class="merch-item">
-        <img src="./images/page-images/demo-img-1.png" alt="" class="merch-image">
-        <p class="merch-p">Lorum Ipsem snafu tibca sordid etci. Lorum Ipsem snafu tibca sordid etci. </p>
-        <a href="*" class="merch-link">Shop</a>
+    <div id="merch-section">
+        <div class="merch-item">
+            <img src="./images/page-images/demo-img-1.png" alt="" class="merch-image">
+            <p class="merch-p">Lorum Ipsem snafu tibca sordid etci. Lorum Ipsem snafu tibca sordid etci. </p>
+            <a href="*" class="merch-link">Shop</a>
+        </div>
+
+        <div class="merch-item">
+            <img src="./images/page-images/demo-img-1.png" alt="" class="merch-image">
+            <p class="merch-p">Lorum Ipsem snafu tibca sordid etci. Lorum Ipsem snafu tibca sordid etci. </p>
+            <a href="*" class="merch-link">Shop</a>
+        </div>
+
+        <div class="merch-item">
+            <img src="./images/page-images/demo-img-1.png" alt="" class="merch-image">
+            <p class="merch-p">Lorum Ipsem snafu tibca sordid etci. Lorum Ipsem snafu tibca sordid etci. </p>
+            <a href="*" class="merch-link">Shop</a>
+        </div>
+
+        <div class="merch-item">
+            <img src="./images/page-images/demo-img-1.png" alt="" class="merch-image">
+            <p class="merch-p">Lorum Ipsem snafu tibca sordid etci. Lorum Ipsem snafu tibca sordid etci. </p>
+            <a href="*" class="merch-link">Shop</a>
+        </div>
     </div>
-</div>
     <!--Merch Section Start-->
 
 </body>
