--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper">
-                <a href="#" class="brand-logo center">Mystic</a>
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="sass.html" class="main-links">About</a></li>
-                    <li><a href="sass.html" class="main-links">Contact</a></li>
-                    <li><a href="badges.html" class="main-links">Shop</a></li>
+                <a href="./index.html" class="brand-logo center">Mystic</a>
+                <ul class="right ">
+                    <li><a href="*" class="main-links">about</a></li>
+                    <li><a href="*" class="main-links">contact</a></li>
+                    <li><a href="*" class="main-links">shop</a></li>
+                    <li><a href="*" class="main-links">specials</a></li>
+
                 </ul>
             </div>
         </nav>
@@ -39,7 +41,7 @@
     <!--Landing Section Start-->
     <div id="landing-section" class="content">
         <div class="overview-text-section">
-            <h2 id="landing-header">October Specials</h2>
+            <h2 id="landing-header">The Magic of Tarot</h2>
             <p id="landing-p">the classic tarot card deck is back in stock for the witching season. get a deck for
                 yourself or a friend for only 25 dollars. </p>
         </div>
@@ -48,30 +50,77 @@
     <!--Merch Section Start-->
     <div id="merch-section">
         <div class="merch-item">
-            <img src="./images/page-images/demo-img-1.png" alt="" class="merch-image">
-            <p class="merch-p">Lorum Ipsem snafu tibca sordid etci. Lorum Ipsem snafu tibca sordid etci. </p>
+            <h5 class="merch-header">Sage</h5>
+            <a href="*"><img src="./images/page-images/demo-img-1.png" alt="" class="merch-image"></a>
+            <p class="merch-p">Sage has been used for thousands of years to clear the air in your home or special space.
+            </p>
             <a href="*" class="merch-link">Shop</a>
         </div>
 
         <div class="merch-item">
-            <img src="./images/page-images/demo-img-1.png" alt="" class="merch-image">
-            <p class="merch-p">Lorum Ipsem snafu tibca sordid etci. Lorum Ipsem snafu tibca sordid etci. </p>
+            <h5 class="merch-header">Nag Champa Incense</h5>
+            <img src="./images/page-images/demo-img-2.png" alt="" class="merch-image">
+            <p class="merch-p">The classic sandalwood incense is back in stock. This incense is perfect for meditation.
+            </p>
             <a href="*" class="merch-link">Shop</a>
         </div>
 
         <div class="merch-item">
-            <img src="./images/page-images/demo-img-1.png" alt="" class="merch-image">
-            <p class="merch-p">Lorum Ipsem snafu tibca sordid etci. Lorum Ipsem snafu tibca sordid etci. </p>
+            <h5 class="merch-header">Crystal Ball</h5>
+            <img src="./images/page-images/demo-img-3.png" alt="" class="merch-image">
+            <p class="merch-p">Crystal balls are used for devination, meditation or all around gorgeous display pieces.
+            </p>
             <a href="*" class="merch-link">Shop</a>
         </div>
 
         <div class="merch-item">
-            <img src="./images/page-images/demo-img-1.png" alt="" class="merch-image">
-            <p class="merch-p">Lorum Ipsem snafu tibca sordid etci. Lorum Ipsem snafu tibca sordid etci. </p>
+            <h5 class="merch-header">White Crystals</h5>
+            <img src="./images/page-images/demo-img-4.png" alt="" class="merch-image">
+            <p class="merch-p">These crystals have healing properties unlike any other. </p>
             <a href="*" class="merch-link">Shop</a>
         </div>
+
+        <div class="merch-item">
+            <h5 class="merch-header">Purple Crystals</h5>
+            <img src="./images/page-images/demo-img-5.png" alt="" class="merch-image">
+            <p class="merch-p">These crystals have healing properties as well as energizing effects. </p>
+            <a href="*" class="merch-link">Shop</a>
+        </div>
+
+        <div class="merch-item">
+            <h5 class="merch-header">The Black Arts</h5>
+            <img src="./images/page-images/demo-img-6.png" alt="" class="merch-image">
+            <p class="merch-p">A cronicle written by Richard Cavinbin reviews a history of dark majic.</p>
+            <a href="*" class="merch-link">Shop</a>
+        </div>
+        <div class="merch-item">
+
+            <h5 class="merch-header">Sage</h5>
+            <img src="./images/page-images/demo-img-1.png" alt="" class="merch-image">
+            <p class="merch-p">Sage has been used for thousands of years to clear the air in your home or special space.
+            </p>
+            <a href="*" class="merch-link">Shop</a>
+        </div>
+
+        <div class="merch-item">
+            <h5 class="merch-header">Nag Champa Incense</h5>
+            <img src="./images/page-images/demo-img-2.png" alt="" class="merch-image">
+            <p class="merch-p">The classic sandalwood incense is back in stock. This incense is perfect for meditation.
+            </p>
+            <a href="*" class="merch-link">Shop</a>
+        </div>
+
+        <div class="merch-item">
+            <h5 class="merch-header">Crystal Ball</h5>
+            <img src="./images/page-images/demo-img-3.png" alt="" class="merch-image">
+            <p class="merch-p">Crystal balls are used for devination, meditation or all around gorgeous display pieces.
+            </p>
+            <a href="*" class="merch-link">Shop</a>
+        </div>
+
+
     </div>
-    <!--Merch Section Start-->
+    <!--Merch Section End-->
 
 </body>
 <script src="./main.js"></script>
