--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 </head>
 
 <body>
+    <!--Main Body Start-->
     <!--Landing Section Start-->
     <div id="landing-section" class="content">
         <div class="overview-text-section">
@@ -47,6 +48,7 @@
         </div>
     </div>
     <!--Landing Section End-->
+
     <!--Merch Section Start-->
     <div id="merch-section">
         <div class="merch-item">
@@ -121,7 +123,7 @@
 
     </div>
     <!--Merch Section End-->
-
+    <!--Main Body End-->
 </body>
 <script src="./main.js"></script>
 
